# neural

./: .gitignore  CMakeLists.txt  Makefile
docs/helpers/: add.both  add.header  add.source  status
include/creature/: creature_base.hpp  creature_population.hpp
include/meta/: defines.hpp  demo.hpp  externs.hpp  globals.hpp  headers.hpp
include/misc/: misc_base.hpp  misc_color.hpp  misc_math.hpp  misc_timer.hpp
include/neural/: neural_base.hpp  neural_dna.hpp  neural_layer.hpp  neural_network.hpp
include/screen/: screen_base.hpp  screen_bird.hpp  screen_colors.hpp  screen_hexagon.hpp  screen_jump.hpp  screen_select.hpp
src/creature/: creature_base.cpp  creature_population.cpp
src/meta/: demo.cpp  main.cpp
src/misc/: misc_base.cpp  misc_color.cpp  misc_math.cpp  misc_timer.cpp
src/screen/: screen_bird.cpp  screen_colors.cpp  screen_hexagon.cpp  screen_jump.cpp  screen_select.cpp
